--- a/02-pokemon-ssr/package.json
+++ b/02-pokemon-ssr/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "npm run test && ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
+    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
     "serve:ssr:pokemon-ssr": "node dist/pokemon-ssr/server/server.mjs"
   },
   "private": true,
@@ -40,6 +40,7 @@
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
+    "puppeteer": "^24.29.1",
     "typescript": "5.9.3"
   }
 }
