--- a/02-pokemon-ssr/package.json
+++ b/02-pokemon-ssr/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
+    "test": "export CHROME_BIN=$(node -e \"console.log(require('puppeteer').executablePath())\") && ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
     "serve:ssr:pokemon-ssr": "node dist/pokemon-ssr/server/server.mjs"
   },
   "private": true,
