--- a/02-pokemon-ssr/netlify.toml
+++ b/02-pokemon-ssr/netlify.toml
@@ -1,3 +1,8 @@
 [build]
   command = "npm run test && npm run build"
   publish = "dist/pokemon-ssr/browser"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
