--- a/02-pokemon-ssr/netlify.toml
+++ b/02-pokemon-ssr/netlify.toml
@@ -1,8 +1,12 @@
 [build]
-  command = "npm run test && npm run build"
+  command = "npx puppeteer install && npm run test && npm run build"
   publish = "dist/pokemon-ssr/browser"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = "false"
+  CHROME_BIN = "/opt/buildhome/.cache/puppeteer/chrome/linux-*/chrome"
