--- a/02-pokemon-ssr/package.json
+++ b/02-pokemon-ssr/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng test --watch=false &&ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "export CHROME_BIN=$(node -e \"console.log(require('puppeteer').executablePath())\") && ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
+    "test": "ng test --watch=false",
     "serve:ssr:pokemon-ssr": "node dist/pokemon-ssr/server/server.mjs"
   },
   "private": true,
@@ -40,7 +40,6 @@
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "puppeteer": "^24.29.1",
     "typescript": "5.9.3"
   }
 }
