--- a/02-pokemon-ssr/package.json
+++ b/02-pokemon-ssr/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "find / -name \"chrome\" && ng test --watch=false --browsers=ChromeHeadless && ng build",
+    "build": "ng test --watch=false --browsers=ChromeHeadless && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --watch=false --browsers=ChromeHeadless",
     "serve:ssr:pokemon-ssr": "node dist/pokemon-ssr/server/server.mjs"
